<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/discord_grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_title"
        android:textSize="24sp"
        android:textColor="@color/discord_text"
        android:layout_marginBottom="16dp"/>
        
    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_registering"
        android:textColor="@color/discord_text"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/upUrlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textColor="@color/discord_text"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blurple"
        android:enabled="false"
        android:text="@string/copy_url"
        android:visibility="visible" />
        
    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blurple"
        android:text="@string/retry_registration"
        android:visibility="gone" />
        
    <Button
        android:id="@+id/selectDistributorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blurple"
        android:text="@string/select_different_distributor"
        android:visibility="gone" />
        
    <Button
        android:id="@+id/notificationStyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blurple"
        android:text="@string/notification_style"
        android:visibility="visible" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:visibility="visible"
        android:backgroundTint="@color/blurple"/>

</LinearLayout>